try to fix home connection mistake on mobile

--- a/src/Pages/HomeConnection/styles.scss
+++ b/src/Pages/HomeConnection/styles.scss
@@ -3,11 +3,11 @@
   background-position: center;
   background-size: cover;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
 
   &__container {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
